# TraceMind

./: .gitignore  AGENTS.md  DESIGN.md  README.md  package-lock.json  package.json  rspack.config.js  tsconfig.json
.meteor/: .id  packages  versions
client/: main.css  main.html  main.js
docs/: agent_instrumentation_guidance.md  appinn_submission_2026-05-17.md  auth_token_design.md  auto_capture_design.md  customer_acquisition_progress.md  customer_acquisition_workplan_2026-05-18.md  customer_acquisition_workplan_2026-05-19.md  customer_acquisition_workplan_2026-05-20.md  customer_acquisition_workplan_2026-05-21.md  customer_acquisition_workplan_2026-05-22.md  customer_acquisition_workplan_2026-05-23.md  customer_acquisition_workplan_2026-05-26.md  customer_messaging.md  deployment.md  early_customer_acquisition.md  feedback-loop-demo.html  frontend_optimization_plan.md  implementation_progress.md  ingestion_guard_design.md  mcp_design.md  mvp_technical_plan.md  product_backlog.md  seed_customer_outreach_2026-05-17.md  seed_customer_pipeline_2026-05-17.md  semantic_event_design.md  social_promotion_posts_2026-05-17.md  social_reply_targets_2026-05-17.md  social_reply_targets_2026-05-18.md  social_reply_targets_2026-05-19.md  social_reply_targets_2026-05-20.md  social_reply_targets_2026-05-21.md  (+3 more)
sdk/mcp-python/: pyproject.toml
sdk/mcp-python/tests/: test_tracemind_mcp.py
sdk/mcp-python/tracemind_mcp/: __init__.py
sdk/server-python/: pyproject.toml
sdk/server-python/tests/: test_tracemind_server.py
sdk/server-python/tracemind_server/: __init__.py
(+111 files in other folders)
