[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tracemind-mcp"
version = "0.1.0"
description = "TraceMind capture wrappers for Python MCP servers."
requires-python = ">=3.9"
license = "UNLICENSED"

[project.urls]
Repository = "https://github.com/wolf3c/TraceMind"

[tool.hatch.build.targets.wheel]
packages = ["tracemind_mcp"]
